Fix wrong background color

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -43,5 +43,4 @@
 .content {
   margin-left: 5px;
   flex-grow: 1;
-  background-color: var(--mat-sys-surface);
 }
